writing-a-c-compiler-tests/tests/chapter_9/invalid_types/multiple_function_definitions_2.c
 
int foo(void){
    return 3;
}

int main(void) {
 
    int foo(void);
    return foo();
}

int foo(void){
    return 4;
}